<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">LoginAppAna</string>
    <string name="todo" tools:ignore="DuplicateDefinition">TODO</string>
    <string name="correo">Correo</string>
    <string name="password">Password</string>
    <string name="iniciar_sesi_n" translatable="false">Iniciar sesión</string>
    <string name="cerrar_sesi_n" translatable="false">Cerrar sesión</string>
    <string name="forgot_password" translatable="false">Forgot Password?</string>
    <string name="login" translatable="false">Login</string>
    <string name="or_via_social_media" translatable="false">Or via social media</string>
    <string name="don_t_have_an_account" translatable="false">Don\'t have an account?</string>
    <string name="register_now">Register now</string>
    <string name="by_signing_up_you_are_agree_with_our">By signing up, you are agree with our</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="sign_up">Sign Up</string>
    <string name="please_registration_with_email_and_sign_up_to_continue_using_our_app">Please Registration with email and sign up to continue using our app.</string>
    <string name="enter_via_social_networks">Enter via Social Networks</string>
    <string name="you_already_have_an_account">You already have an account?</string>
</resources>