<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login2">

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/welcome_back"
            android:textAlignment="center"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints=""
            tools:ignore="LabelFor" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="285dp"
            android:layout_height="222dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/grupo_202"
            tools:layout_editor_absoluteY="98dp"
            tools:ignore="MissingConstraints"
            android:contentDescription="@string/todo" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPassword"
            android:layout_width="282dp"
            android:layout_height="43dp"
            android:drawableStart="@drawable/icon_feather_lock"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="401dp"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtMail"
            android:layout_width="282dp"
            android:layout_height="43dp"
            android:drawableStart="@drawable/icon_feather_mail"
            android:hint="@string/correo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="155dp"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/purple_500"
            tools:layout_editor_absoluteX="193dp"
            tools:layout_editor_absoluteY="444dp"
            tools:ignore="LabelFor,MissingConstraints"
            android:autofillHints="" />

        <Button
            android:id="@+id/button"
            android:layout_width="172dp"
            android:layout_height="54dp"
            android:text="@string/login"
            app:cornerRadius="30dp"
            app:layout_constraintCircleRadius="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="484dp"
            tools:ignore="MissingConstraints" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="121dp"
            android:layout_height="20dp"
            android:layout_marginStart="144dp"
            android:text="@string/or_via_social_media"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="550dp"
            tools:ignore="MissingConstraints" />


        <LinearLayout
            android:layout_width="316dp"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="578dp"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/facebook"
                tools:layout_editor_absoluteX="43dp"
                tools:layout_editor_absoluteY="629dp"
                android:contentDescription="@string/todo" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/gmail"
                tools:layout_editor_absoluteX="109dp"
                tools:layout_editor_absoluteY="639dp"
                android:contentDescription="@string/todo" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/twitter"
                tools:layout_editor_absoluteX="202dp"
                tools:layout_editor_absoluteY="639dp"
                android:contentDescription="@string/todo" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.375"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="654dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="93dp"
            android:layout_height="19dp"
            android:layout_marginEnd="72dp"
            android:ems="20"
            android:text="@string/register_now"
            android:textAllCaps="false"
            android:textColor="@color/purple_500"
            android:textColorLink="@color/purple_500"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="654dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/by_signing_up_you_are_agree_with_our"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.153"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="16dp"
            android:text="@string/terms_amp_conditions"
            android:textColor="@color/purple_500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>