<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="163dp"
                android:layout_height="279dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="84dp"
                app:layout_constrainEnd_toEndOf="parent"
                app:layout_constrainStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/icon_user"
                android:contentDescription="@string/todo"
                tools:ignore="ContentDescription" />


            <EditText

                android:id="@+id/txtMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="56dp"
                android:drawableStart="@drawable/icon_email"
                android:ems="10"
                android:hint="@string/correo"
                android:inputType="textEmailAddress"

                android:paddingStart="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.512"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.721"
                android:autofillHints=""
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="408dp"
                android:layout_marginEnd="60dp"
                android:drawableStart="@drawable/icon_lock"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="numberPassword"
                android:paddingStart="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:autofillHints=""
                tools:ignore="RtlSymmetry" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="584dp"
                android:background="#36A342"
                android:text="@string/iniciar_sesi_n"
                android:textColor="#FFF"
                android:textSize="10sp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp"
                tools:ignore="MissingConstraints,SmallSp">

            </Button>

            <Button
                android:id="@+id/btnCerrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="584dp"
                android:background="#36A342"
                android:text="@string/cerrar_sesi_n"
                android:textColor="#FFF"
                android:textSize="10sp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="174dp"
                tools:ignore="MissingConstraints,SmallSp">

            </Button>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>